[package]
name = "blockalloc"
version = "0.1.0"
authors = ["Peter Liniker <peter.liniker@gmail.com>"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[features]
# On unstable/nightly, allow use of allocator_api
alloc = []
unstable = ["alloc"]
